# llvmmgmt

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: build.rs  config.rs  entry.rs  error.rs  llvm-mirror.toml  resource.rs
src/shell/: bash  zsh
