[package]
name = "llvmmgmt"
version = "0.1.0"
authors = ["GNDFR <https://github.com/GNDFR>"]
edition = "2018"
description = "Manager for LLVM/Clang builds"
license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/llvmmgmt"
repository    = "https://github.com/GNDFR/llvmmgmt"
categories = ["development-tools", "command-line-utilities"]
keywords = ["llvm", "clang", "env"]

[[bin]]
name = "llvmmgmt"
path = "src/bin/llvmmgmt.rs"

[dependencies]
bytes = "1.1.0"
dirs = "3.0.1"
fs_extra = "1.2.0"
futures = "0.3.8"
glob = "0.3.0"
indicatif = "0.15.0"
itertools = "0.9.0"
lazy_static = "1.4"
log = "0.4.11"
num_cpus = "1.13.0"
regex = "1.4.2"
reqwest = { version = "0.11.5", features = ["blocking", "stream"] }
semver = "0.11"
serde = "1.0.117"
serde_derive = "1.0.117"
shellexpand = "2.0.0"
simplelog = "0.8.0"
structopt = "0.3.21"
tar = "0.4.30"
tempfile= "3.1.0"
thiserror = "1.0.22"
tokio = { version = "1.12.0", features = ["rt-multi-thread"] }
toml = "0.5.7"
url = "2.2.0"
which = { version = "4.0.2", default-features = false }
xz2 = "0.1.6"

[dev-dependencies]
paste = "1.0.3"

[package.metadata.release]
dev-version = false